# inaturalist-to-ankivalenz

./: .gitignore  README.md  pyproject.toml
prompts/: iNaturalist-to-Ankivalenz.md
src/inaturalist_to_ankivalenz/: __init__.py  api.py  cli.py  markdown.py
tests/: test_markdown.py
