[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inaturalist-to-ankivalenz"
version = "0.2.0"
description = "Export iNaturalist observations to Ankivalenz-formatted Markdown for creating flashcards"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Harry Vangberg", email = "harry@vangberg.name" }
]
dependencies = [
    "requests>=2.31.0",
    "click>=8.1.7"
]

[project.scripts]
inaturalist-to-ankivalenz = "inaturalist_to_ankivalenz.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/inaturalist_to_ankivalenz"] 